# ZeroTrace_v1

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.clean  README.md  docker-compose.yml  fly.toml  package.json  wrangler.toml  zerotrace_detonate_v56.sh
.github/workflows/: deploy.yml  security-matrix.yml
config/: security_manifest.json  vector_registry.json
deploy/kubernetes/: digital-scif-policy.yaml  gvisor-runtime.yaml  mcp-sandbox.yaml  zerotrace-core.yaml
docker/: Dockerfile.lean  Dockerfile.secure_runner  Dockerfile.vault_uploader  docker-compose.secure.yml  init.sql
docs/: API_Documentation_v1.0.3.md  Adversarial_Custody_Policy.md  Deployment_Roadmap.md  Financial_ROI_Analysis.md  GTM_Pitch_Deck.md  Master_Strategy_Dossier.md  ZeroTrace_Technical_Specification_v1.0.md  deployment_guide.md  executive_summary.md  financial_roi_model.md  technical_specification_v1.0.md  vector_manifest.md
docs/architecture/: neo4j_lockdown.cypher  neo4j_pipeline.cypher  neo4j_queries.cypher  neo4j_schema.md  neo4j_security_policy.cypher  postgres_schema.sql
docs/compliance/: digital_scif_workflow.md  emergency_procedures.md  graph_isolation_strategy.md  (+2 more)
migrations/: 001_initial_auth.sql
prompts/: system_prompt.md
scripts/: healthcheck_volume.sh  onboard.sh  onboard_tenant.sh
tests/: README.md  verify_dbs.mjs
zerotrace-core/: Cargo.toml  Dockerfile  test_output.txt  test_output_utf8.txt
zerotrace-core/migrations/: 001_initial_auth.sql
zerotrace-core/prometheus/: alerts.yml
zerotrace-core/src/: lib.rs  main.rs  worker.rs
zerotrace-core/src/config/: manifest_loader.rs  mod.rs
zerotrace-core/src/graph/: connection_pool.rs  mod.rs  neo4j.rs
zerotrace-core/src/graph/cypher/: audit_trace.cql  toxic_combinations.cql
zerotrace-core/src/interceptor/: agency.rs  agentic_firewall.rs  audited_registry.rs  canary.rs  cognitive.rs  consumption.rs  cprf.rs  crescendo.rs  deep_research.rs  detect.rs  detonator.rs  differential_privacy.rs  emerging.rs  entropy.rs  financial.rs  hallucination.rs  immunizer.rs  insecure_code.rs  linguistic_shield.rs  llm01_sentinel.rs  logic_guard.rs  memorization.rs  mod.rs  model_inversion.rs  model_theft.rs  model_theft_guard.rs  normalization.rs  openclaw.rs  openclaw_sentinel.rs  output_guard.rs  overreliance.rs  path_jail.rs  perplexity.rs  plugin_guard.rs  poison.rs  privacy_filter.rs  registry_guard.rs  sanitize.rs  secrets.rs  shadow_ai.rs  (+8 more)
zerotrace-core/src/interceptor/model_inversion/: api.rs  internal.rs  mod.rs
zerotrace-core/src/middleware/: egress_scrubber.rs  exfiltration.rs  mod.rs  multi_tenant.rs
zerotrace-core/src/monitoring/: mod.rs  shadow_telemetry.rs  volume_health.rs  worm_ledger.rs
zerotrace-core/src/network/: audit.rs  forensics.rs  mod.rs  proxy.rs  redis.rs
zerotrace-core/src/protocol/: dbs.rs
zerotrace-core/src/security/: agent_sentry.rs  broker.rs  cognitive_monitor.rs  drift_audit.rs  emg21.rs  emg22.rs  emg23.rs  emg24.rs  emg25.rs  emg26.rs  emg27.rs  emg28.rs  emg29.rs  immutable_audit.rs  kms_client.rs  mcp_registry.rs  mfa_guard.rs  mod.rs  parallel_mesh.rs  sandbox.rs  speculative_mesh.rs  speculative_router.rs  stateful_baseline.rs  transient_vault.rs  v36_entropy_tracker.rs  v39_toxic_guard.rs  v40_vibe_scanner.rs  v41_cfs_normalizer.rs  v42_rate_limiter.rs  v43_spectral_monitor.rs  v44_mcp_auditor.rs  v45_unicode_sanitizer.rs  v47_rag_poisoning.rs  v48_linguistic_flattening.rs  v49_nhi_rotation.rs  v50_ast_auditor.rs  v51_sampling_quota.rs  v52_namespace_pinning.rs  v53_biometric_liveness.rs  v54_nhi_lifecycle.rs  (+1 more)
zerotrace-core/src/storage/: mod.rs  postgres.rs  rls.rs
zerotrace-core/tests/: adversarial_detonation.rs  agentic_shield_test.rs  consumption_guard_tests.rs  cprf_tests.rs  crescendo_tests.rs  deep_research_tests.rs  detect_tests.rs  detonation_suite.rs  emerging_threats_guard_tests.rs  financial_guard_tests.rs  hallucination_guard_tests.rs  intent_analyzer_tests.rs  model_inversion_integration_tests.rs  onboarding_validation.rs  secret_scanner_tests.rs  security_integration.rs
(+16 files in other folders)
