[package]
name = "zerotrace-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web & Async
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } # for Gemini API

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Graph
neo4rs = "0.7"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
base64 = "0.21"
url = "2.5"

# Security & Performance
strsim = "0.11" # Typosquatting
aho-corasick = "1.0" # Fast Multi-Pattern Matching (PII)
dashmap = "5.5" # Concurrent Caching
regex = "1.10"
tiktoken-rs = "0.5"
lazy_static = "1.4"

# Telemetry
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
unicode-normalization = "0.1"
worker = "0.3.0"
console_error_panic_hook = "0.1.7"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
rust_decimal = "1.33"
v_htmlescape = "0.15"
thiserror = "1.0"
anyhow = "1.0"




